iptables/rules.v4
# Generated by iptables-save v1.6.2 on Wed Aug  8 23:05:11 2018
*raw
:PREROUTING ACCEPT [5861:824905]
:OUTPUT ACCEPT [4578:216287]
-A PREROUTING -m rpfilter --invert -j DROP
COMMIT
# Completed on Wed Aug  8 23:05:11 2018
# Generated by iptables-save v1.6.2 on Wed Aug  8 23:05:11 2018
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [4578:216287]
:TCP - [0:0]
:UDP - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j DROP
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -p tcp -m recent --set --name TCP-PORTSCAN --mask 255.255.255.255 --rsource -j DROP
-A INPUT -p udp -m recent --set --name UDP-PORTSCAN --mask 255.255.255.255 --rsource -j DROP
-A INPUT -j DROP
-A TCP -p tcp -m recent --update --seconds 60 --name TCP-PORTSCAN --mask 255.255.255.255 --rsource -j DROP
-A UDP -p udp -m recent --update --seconds 60 --name UDP-PORTSCAN --mask 255.255.255.255 --rsource -j DROP
COMMIT
# Completed on Wed Aug  8 23:05:11 2018
